--- a/.github/workflows/autograde.yml
+++ b/.github/workflows/autograde.yml
@@ -1,1 +1,20 @@
+name: Auto Grading
+
+on: [push]
+
+jobs:
+  test:
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v3
+
+      - name: Set up Java
+        uses: actions/setup-java@v3
+        with:
+          distribution: 'temurin'
+          java-version: '17'
+
+      - name: Run Tests
+        run: mvn test
 
